spectrum-master/package/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spectrum
spec:
  replicas: $REPLICAS
  selector:
    matchLabels:
      app: spectrum
  template:
    metadata:
      labels:
        app: spectrum
    spec:
      tolerations:
        - key: 'SERVICE_TYPE'
          operator: 'Equal'
          value: 'spectrum'
          effect: 'NoSchedule'
      containers:
        - name: spectrum
          image: gcr.io/$GCP_PROJECT/spectrum:$IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /arcade/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
